[package]
name = "rust_bio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "*", features = ["derive"]}
bio = "*"
textplots = "0.3"
num-traits = "0.2"
serde = "*"
serde_json = "*"
flate2 = "1.0"
log = "*"
env_logger="*"
